--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -94,7 +94,8 @@
    "outputs": [],
    "source": [
     "#!wget -P ../data https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB-Training_fixed.zip\n",
-    "#!wget -P ../data https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Online-Test-Images-Sorted.zip"
+    "#!wget -P ../data https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Online-Test-Images-Sorted.zip\n",
+    "#rm -rf ../data/GTSRB/Online-Test-sort/Images"
    ]
   },
   {
@@ -2071,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2086,8 +2087,52 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "  7/666 [..............................] - ETA: 1:10 - loss: 4.0177 - accuracy: 0.0491"
+      "666/666 [==============================] - 98s 129ms/step - loss: 0.9414 - accuracy: 0.7218 - val_loss: 1.2533 - val_accuracy: 0.6303 - lr: 0.0010\n",
+      "Epoch 2/20\n",
+      "666/666 [==============================] - 85s 127ms/step - loss: 0.4172 - accuracy: 0.8749 - val_loss: 1.2421 - val_accuracy: 0.6556 - lr: 0.0010\n",
+      "Epoch 3/20\n",
+      "666/666 [==============================] - 84s 126ms/step - loss: 0.3087 - accuracy: 0.9092 - val_loss: 1.2886 - val_accuracy: 0.6682 - lr: 0.0010\n",
+      "Epoch 4/20\n",
+      "666/666 [==============================] - 83s 125ms/step - loss: 0.2507 - accuracy: 0.9263 - val_loss: 1.2984 - val_accuracy: 0.6695 - lr: 0.0010\n",
+      "Epoch 5/20\n",
+      "666/666 [==============================] - 85s 128ms/step - loss: 0.2176 - accuracy: 0.9353 - val_loss: 1.2445 - val_accuracy: 0.6839 - lr: 0.0010\n",
+      "Epoch 6/20\n",
+      "666/666 [==============================] - 87s 130ms/step - loss: 0.1906 - accuracy: 0.9421 - val_loss: 1.2990 - val_accuracy: 0.6909 - lr: 0.0010\n",
+      "Epoch 7/20\n",
+      "666/666 [==============================] - 88s 132ms/step - loss: 0.1719 - accuracy: 0.9472 - val_loss: 1.3250 - val_accuracy: 0.6847 - lr: 0.0010\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 155). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\andre\\AppData\\Local\\Temp\\tmpijo0svrn\\model\\data\\model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\andre\\AppData\\Local\\Temp\\tmpijo0svrn\\model\\data\\model\\assets\n",
+      "2022/09/11 05:08:17 WARNING mlflow.utils.autologging_utils: Encountered unexpected error during autologging: '__file__'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x247ddcec5e0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2101,7 +2146,8 @@
     ")\n",
     "model.fit(\n",
     "    train_generator, \n",
-    "    epochs=20, \n",
+    "    epochs=20,\n",
+    "    verbose=2,\n",
     "    callbacks=[early_stopping, reduce_lr], \n",
     "    validation_data=validation_generator,\n",
     ")"
@@ -2116,13 +2162,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 12569 images belonging to 43 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen  = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    samplewise_center=False,\n",
+    "    samplewise_std_normalization=False,\n",
+    "    rescale=1./255,\n",
+    "    validation_split=0.2,\n",
+    ")\n",
+    "\n",
+    "test_generator = validation_datagen.flow_from_directory(\n",
+    "    TEST_PATH,\n",
+    "    target_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    class_mode='categorical',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "393/393 [==============================] - 26s 66ms/step - loss: 0.9986 - accuracy: 0.7281\n",
+      "Test Accuracy: 0.728140652179718\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = model.evaluate(test_generator)\n",
     "print(\"Test Accuracy:\", test_acc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
