Updating for terraform

--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -69,8 +69,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-12 02:15:32.625892: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-09-12 02:15:32.625929: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-09-12 02:47:23.982170: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-09-12 02:47:23.982214: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -321,10 +321,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-12 02:15:38.141434: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-09-12 02:15:38.141475: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-09-12 02:15:38.141499: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-10-0-2-40): /proc/driver/nvidia/version does not exist\n",
-      "2022-09-12 02:15:38.141701: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-12 02:47:29.427383: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-09-12 02:47:29.427431: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-09-12 02:47:29.427455: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-10-0-2-40): /proc/driver/nvidia/version does not exist\n",
+      "2022-09-12 02:47:29.427686: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -2201,25 +2201,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/.local/share/virtualenvs/MLOpsFinal-KfoGGy2b/lib/python3.8/site-packages/mlflow/utils/autologging_utils/__init__.py:416: FutureWarning: Autologging support for keras >= 2.6.0 has been deprecated and will be removed in a future MLflow release. Use `mlflow.tensorflow.autolog()` instead.\n",
-      "  return _autolog(*args, **kwargs)\n",
-      "2022/09/12 02:15:46 WARNING mlflow.utils.autologging_utils: Encountered unexpected error during autologging: Unable to locate credentials\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "2664/2664 [==============================] - ETA: 0s - loss: 0.7603 - accuracy: 0.7664"
+      "2664/2664 [==============================] - 1529s 570ms/step - loss: 0.7545 - accuracy: 0.7670 - val_loss: 1.4348 - val_accuracy: 0.6227 - lr: 0.0010\n",
+      "Epoch 2/5\n",
+      "1027/2664 [==========>...................] - ETA: 29:38 - loss: 0.3652 - accuracy: 0.8783"
      ]
     }
    ],
    "source": [
-    "mlflow.keras.autolog()\n",
+    "mlflow.tensorflow.autolog()\n",
     "mlflow.log_param(\"model\", model_name)\n",
     "\n",
     "model.fit(\n",
