--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -2207,7 +2207,11 @@
       "Epoch 1/5\n",
       "2664/2664 [==============================] - 1529s 570ms/step - loss: 0.7545 - accuracy: 0.7670 - val_loss: 1.4348 - val_accuracy: 0.6227 - lr: 0.0010\n",
       "Epoch 2/5\n",
-      "1027/2664 [==========>...................] - ETA: 29:38 - loss: 0.3652 - accuracy: 0.8783"
+      "2664/2664 [==============================] - 4148s 2s/step - loss: 0.3454 - accuracy: 0.8837 - val_loss: 1.5346 - val_accuracy: 0.6550 - lr: 0.0010\n",
+      "Epoch 3/5\n",
+      "2664/2664 [==============================] - 4404s 2s/step - loss: 0.2571 - accuracy: 0.9125 - val_loss: 1.6085 - val_accuracy: 0.6498 - lr: 0.0010\n",
+      "Epoch 4/5\n",
+      "1946/2664 [====================>.........] - ETA: 16:15 - loss: 0.2201 - accuracy: 0.9249"
      ]
     }
    ],
