--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -2211,7 +2211,7 @@
       "Epoch 3/5\n",
       "2664/2664 [==============================] - 4404s 2s/step - loss: 0.2571 - accuracy: 0.9125 - val_loss: 1.6085 - val_accuracy: 0.6498 - lr: 0.0010\n",
       "Epoch 4/5\n",
-      "1946/2664 [====================>.........] - ETA: 16:15 - loss: 0.2201 - accuracy: 0.9249"
+      "2664/2664 [==============================] - ETA: 0s - loss: 0.2148 - accuracy: 0.9261"
      ]
     }
    ],
