Updating for terraform

--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -2211,7 +2211,9 @@
       "Epoch 3/5\n",
       "2664/2664 [==============================] - 4404s 2s/step - loss: 0.2571 - accuracy: 0.9125 - val_loss: 1.6085 - val_accuracy: 0.6498 - lr: 0.0010\n",
       "Epoch 4/5\n",
-      "2664/2664 [==============================] - ETA: 0s - loss: 0.2148 - accuracy: 0.9261"
+      "2664/2664 [==============================] - 4504s 2s/step - loss: 0.2148 - accuracy: 0.9261 - val_loss: 1.5450 - val_accuracy: 0.6884 - lr: 0.0010\n",
+      "Epoch 5/5\n",
+      " 480/2664 [====>.........................] - ETA: 47:40 - loss: 0.1931 - accuracy: 0.9339"
      ]
     }
    ],
