Updating for Dockerfile apt get

--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -2213,7 +2213,7 @@
       "Epoch 4/5\n",
       "2664/2664 [==============================] - 4504s 2s/step - loss: 0.2148 - accuracy: 0.9261 - val_loss: 1.5450 - val_accuracy: 0.6884 - lr: 0.0010\n",
       "Epoch 5/5\n",
-      " 609/2664 [=====>........................] - ETA: 48:55 - loss: 0.1906 - accuracy: 0.9343"
+      " 737/2664 [=======>......................] - ETA: 43:04 - loss: 0.1943 - accuracy: 0.9325"
      ]
     }
    ],
