Finishing notebook and model registration

--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -42,26 +42,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "\n",
-    "# path = \"../data\"\n",
-    "\n",
-    "# for root, dirs, files in os.walk(path):\n",
-    "#     level = root.replace(path, '').count(os.sep)\n",
-    "#     print(level)\n",
-    "#     indent = ' ' * 4 * (level)\n",
-    "#     print('{}{}/'.format(indent, os.path.basename(root)))\n",
-    "#     subindent = ' ' * 4 * (level + 1)\n",
-    "#     for f in files:\n",
-    "#         print('{}{}'.format(subindent, f))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2197,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2193,36 @@
       "Epoch 4/5\n",
       "2664/2664 [==============================] - 4504s 2s/step - loss: 0.2148 - accuracy: 0.9261 - val_loss: 1.5450 - val_accuracy: 0.6884 - lr: 0.0010\n",
       "Epoch 5/5\n",
-      " 994/2664 [==========>...................] - ETA: 37:46 - loss: 0.1940 - accuracy: 0.9328"
+      "2664/2664 [==============================] - 4473s 2s/step - loss: 0.1887 - accuracy: 0.9352 - val_loss: 1.6144 - val_accuracy: 0.6777 - lr: 0.0010\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-12 08:05:43.026948: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /tmp/tmpy4p5vxq8/model/data/model/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022/09/12 08:06:53 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/home/ubuntu/.local/share/virtualenvs/MLOpsFinal-KfoGGy2b/lib/python3.8/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1572/1572 [==============================] - 2027s 1s/step - loss: 1.2044 - accuracy: 0.7234\n",
+      "Test Accuracy: 0.7234465479850769\n"
      ]
     }
    ],
@@ -2244,24 +2253,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Registering Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlflow.keras.log_model(\n",
-    "    keras_model = model, \n",
-    "    artifact_path=\"../models\",\n",
-    "    registered_model_name=\"road-sign-recognition-cnn\"\n",
+    "from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "\n",
+    "client = MlflowClient(\"http://127.0.0.1:5000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<RegisteredModel: creation_timestamp=1662972158559, description='', last_updated_timestamp=1662972158596, latest_versions=[<ModelVersion: creation_timestamp=1662972158596, current_stage='None', description='', last_updated_timestamp=1662972158596, name='road-sign-recognition-cnn', run_id='d64b05c80dbc4196bd929401f70abb33', run_link='', source='s3://mlops-final-models/1/d64b05c80dbc4196bd929401f70abb33/artifacts/../models', status='READY', status_message='', tags={}, user_id='', version='1'>], name='road-sign-recognition-cnn', tags={}>]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.list_registered_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version: 1, stage: Production\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name='sign-classifier'\n",
+    "\n",
+    "try:\n",
+    "    latest_versions = client.get_latest_versions(name=model_name)\n",
+    "except:\n",
+    "    print(\"Model does not exist yet.\")\n",
+    "    latest_versions = []\n",
+    "\n",
+    "for version in latest_versions:\n",
+    "    print(f\"version: {version.version}, stage: {version.current_stage}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.delete_registered_model(name=model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'sign-classifier'.\n",
+      "2022/09/12 09:04:41 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: sign-classifier, version 1\n",
+      "Created version '1' of model 'sign-classifier'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: creation_timestamp=1662973481360, current_stage='None', description='', last_updated_timestamp=1662973481360, name='sign-classifier', run_id='d64b05c80dbc4196bd929401f70abb33', run_link='', source='s3://mlops-final-models/1/d64b05c80dbc4196bd929401f70abb33/artifacts/model', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run = mlflow.active_run()\n",
+    "run_id = run.info.run_id\n",
+    "\n",
+    "mlflow.register_model(\n",
+    "    model_uri=f\"runs:/{run_id}/model\",\n",
+    "    name='sign-classifier'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Promoting model if test accuracy is better"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artifact_path: model\n",
+      "flavors:\n",
+      "  keras:\n",
+      "    code: null\n",
+      "    data: data\n",
+      "    keras_module: tensorflow.keras\n",
+      "    keras_version: 2.8.0\n",
+      "    save_format: tf\n",
+      "  python_function:\n",
+      "    data: data\n",
+      "    env: conda.yaml\n",
+      "    loader_module: mlflow.keras\n",
+      "    python_version: 3.8.10\n",
+      "mlflow_version: 1.28.0\n",
+      "model_uuid: aa1430073cff4f3e81e3958d29d0ddac\n",
+      "run_id: d64b05c80dbc4196bd929401f70abb33\n",
+      "utc_time_created: '2022-09-12 08:05:17.252591'\n",
+      "\n",
+      "metrics: {'loss': 0.18874505162239075, 'accuracy': 0.9352477192878723, 'val_loss': 1.6143509149551392, 'val_accuracy': 0.677740216255188, 'lr': 0.0010000000474974513, 'stopped_epoch': 4.0, 'test_loss': 1.2043617963790894, 'test_acc': 0.7234465479850769}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If no model, set current as Production\n",
+    "if len(latest_versions) < 1:\n",
+    "    client.transition_model_version_stage(\n",
+    "        name=model_name,\n",
+    "        version=1,\n",
+    "        stage=\"Production\",\n",
+    "        archive_existing_versions=True\n",
+    "    )\n",
+    "else:\n",
+    "    # Gets prod model to compare\n",
+    "    prod_model = mlflow.pyfunc.load_model(f\"models:/{model_name}/Production\")\n",
+    "#     prod_model = mlflow.pyfunc.load_model(\"models:/sign-classifier/Production\")\n",
+    "    print(prod_model.metadata)\n",
+    "    \n",
+    "    prod_model_run = mlflow.get_run(run_id=run.info.run_id)\n",
+    "    prod_model_metrics = prod_model_run.data.metrics\n",
+    "    print(\"metrics: {}\".format(prod_model_metrics))\n",
+    "    \n",
+    "    # If new test accuracy is higher, set current model as production model\n",
+    "    if test_acc > prod_model_metrics.get('test_acc'):\n",
+    "        version = len(latest_versions) + 1\n",
+    "        print(version)\n",
+    "        client.transition_model_version_stage(\n",
+    "            name=model_name,\n",
+    "            version=version,\n",
+    "            stage=\"Production\",\n",
+    "            archive_existing_versions=True\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading and making a test prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = mlflow.keras.load_model(\n",
+    "    model_uri=f\"models:/{model_name}/Production\",\n",
+    "    dst_path=\"../artifacts_local/\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.applications.resnet_v2 import preprocess_input, decode_predictions\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "img_path = \"../data/Meta/32.png\"\n",
+    "img = image.load_img(img_path, target_size=(IMAGE_SIZE, IMAGE_SIZE))\n",
+    "\n",
+    "img_array = image.img_to_array(img)\n",
+    "img_batch = np.expand_dims(img_array, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_preprocessed = preprocess_input(img_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = loaded_model.predict(img_preprocessed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End speed + passing limits sign.\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_class = class_labels[np.argmax(prediction, axis=1)[0]]\n",
+    "print(predicted_class + \" sign.\")"
+   ]
   }
  ],
  "metadata": {
