--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
     "#     prod_model = mlflow.pyfunc.load_model(\"models:/sign-classifier/Production\")\n",
     "    print(prod_model.metadata)\n",
     "    \n",
-    "    prod_model_run = mlflow.get_run(run_id=run.info.run_id)\n",
+    "    prod_model_run = mlflow.get_run(run_id=prod_model.metadata.run_id)\n",
     "    prod_model_metrics = prod_model_run.data.metrics\n",
     "    print(\"metrics: {}\".format(prod_model_metrics))\n",
     "    \n",
@@ -2422,12 +2422,12 @@
     "    if test_acc > prod_model_metrics.get('test_acc'):\n",
     "        version = len(latest_versions) + 1\n",
     "        print(version)\n",
-    "        client.transition_model_version_stage(\n",
-    "            name=model_name,\n",
-    "            version=version,\n",
-    "            stage=\"Production\",\n",
-    "            archive_existing_versions=True\n",
-    "        )"
+    "#         client.transition_model_version_stage(\n",
+    "#             name=model_name,\n",
+    "#             version=version,\n",
+    "#             stage=\"Production\",\n",
+    "#             archive_existing_versions=True\n",
+    "#         )"
    ]
   },
   {
@@ -2463,6 +2463,13 @@
     "\n",
     "img_array = image.img_to_array(img)\n",
     "img_batch = np.expand_dims(img_array, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is kind of haphazardly returning a prediction but it's fine for this project"
    ]
   },
   {
