Testing test file

--- a/notebook/road-signs-recognition.ipynb
+++ b/notebook/road-signs-recognition.ipynb
@@ -131,17 +131,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!wget -P ../data https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB-Training_fixed.zip\n",
-    "#!wget -P ../data https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Online-Test-Images-Sorted.zip\n",
-    "#rm -rf ../data/GTSRB/Online-Test-sort/Images"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -2293,19 +2282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model does not exist yet.\n",
       "version: 1, stage: Production\n"
      ]
     }
    ],
    "source": [
+    "from mlflow.exceptions import RestException\n",
+    "\n",
     "model_name='sign-classifier'\n",
+    "try:\n",
+    "    latest_versions = client.get_latest_versions(name=\"asdas\")\n",
+    "except RestException:\n",
+    "    print(\"Model does not exist yet.\")\n",
+    "    latest_versions = []\n",
     "\n",
     "try:\n",
     "    latest_versions = client.get_latest_versions(name=model_name)\n",
